Fixed horizontal scrolling on mobile devices

--- a/css/pages/index.css
+++ b/css/pages/index.css
@@ -10,6 +10,11 @@ html {
   scroll-behavior: smooth;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 body {
   min-height: 100dvh;
   display: flex;
